# BobaClaw

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.example.yaml  docker-compose.prod.yml
.cursor/: hooks.json
.cursor/hooks/: run-rust-fmt.sh  rust-fmt-after-edit.sh  rust-fmt-check-stop.sh
.cursor/rules/: bobaclaw-runtime-prompt.mdc  bobaclaw-rust.mdc  english-instructions.mdc  harness-contracts.mdc  harness-workflow.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
crates/bobaclaw/: Cargo.toml
crates/bobaclaw-agent/: Cargo.toml
crates/bobaclaw-agent/src/: cancel.rs  channel_delivery.rs  compaction.rs  context.rs  dispatcher.rs  lib.rs  loop_.rs  progress.rs  prompt.rs  review.rs  sources.rs  spawn_completer.rs  tool_loop.rs  turn.rs  turn_context.rs
crates/bobaclaw-agent/src/subagent/: mod.rs  spawn_queue.rs
crates/bobaclaw-agent/src/subagent/backends/: mod.rs
crates/bobaclaw-agent/src/tools/: exec.rs  files.rs  mcp.rs  memory.rs  mod.rs  router.rs  run_view.rs  schedule.rs  skills.rs  spawn.rs  spawn_status.rs  specs.rs  subagent.rs  web.rs  workspace_path.rs
crates/bobaclaw-channel-telegram/: Cargo.toml
crates/bobaclaw-channel-telegram/src/: api.rs  commands.rs  delivery.rs  format.rs  ingress.rs  lib.rs  media.rs  runtime.rs  split.rs  status.rs  stream.rs
crates/bobaclaw-core/: Cargo.toml
crates/bobaclaw-core/src/: agent_config.rs  channels.rs  config.rs  context_config.rs  lib.rs  limits.rs  mcp.rs  paths.rs  policy.rs  request.rs  run.rs  scheduler.rs  subagent_config.rs  tools_config.rs  truncate.rs  turn.rs
crates/bobaclaw-executor/: Cargo.toml
crates/bobaclaw-executor/src/: backend.rs  bwrap.rs  docker.rs  docker_mount.rs  doctor.rs  lib.rs  profile.rs  run.rs  sandbox.rs
crates/bobaclaw-gateway/: Cargo.toml
crates/bobaclaw-gateway/src/: lib.rs  server.rs
crates/bobaclaw-mcp/: Cargo.toml
crates/bobaclaw-mcp/examples/: bench_obscura.rs
crates/bobaclaw-mcp/src/: docker_stdio.rs  hub.rs  lib.rs  naming.rs  result_format.rs
crates/bobaclaw-provider/: Cargo.toml
crates/bobaclaw-provider/src/: lib.rs  openai_compat.rs  tools_chat.rs
crates/bobaclaw-scheduler/: Cargo.toml
crates/bobaclaw-scheduler/src/: deliver.rs  lib.rs  runner.rs
crates/bobaclaw-skill-forge/: Cargo.toml
crates/bobaclaw-skill-forge/src/: forge.rs  lib.rs
crates/bobaclaw-skills/: Cargo.toml
crates/bobaclaw-skills/src/: guard.rs  lib.rs  manager.rs  registry.rs  state.rs  validate.rs
crates/bobaclaw-state/: Cargo.toml
crates/bobaclaw-state/src/: cron.rs  db.rs  ledger.rs  lib.rs  pairing.rs  routes.rs  scheduled.rs  session.rs  spawn_jobs.rs
crates/bobaclaw/src/: chat_ui.rs  interactive.rs  main.rs  terminal_md.rs
docker/: .env.example  config.docker.yaml  entrypoint.sh
docker/bobaclaw/: Dockerfile
docker/sandbox/: Dockerfile
docs/: ARCHITECTURE.md  agent-first-repository.md  as-built.md  best-practices.md  ci-cd.md  evals.md  features.md  memory-beyond-fts.md  telemetry.md
docs/adr/: 001-rust-runtime.md  002-state-and-run-ledger.md  003-executor-profiles.md  004-skill-forge.md  005-memory-architecture.md
evals/: AGENTS.md  README.md
evals/smoke/: repository-contracts.yaml
harness/: AGENTS.md  policy.md  sandbox-contract.md  tool-contract-template.md
harness/channels/: telegram.md
harness/tools/: exec.md  files.md  mcp.md  memory.md  run_view.md  schedule.md  skills.md  subagent.md  web_fetch.md
migrations/: 20260603100000_initial.sql  20260603200000_session_end_reason.sql  20260603210000_pairing.sql  20260604100000_scheduled_tasks.sql  20260606100000_routes_null_thread.sql  20260607100000_cron_delivery.sql  20260609100000_spawn_jobs.sql
plans/: AGENTS.md  backlog.md
plans/active/: agent-loop-quality.md  agent-max-tool-iterations.md  agent-native-file-web-tools.md  agent-recall-run-view-memory-search.md  agent-response-source-citations.md  agent-verification-and-continuation.md  approvals-and-host-danger.md  bootstrap-agent-first-harness.md  executor-timeout-and-cancel-kill.md  f1-approval-flow.md  f10-systemd-packaging.md  f11-minimal-tui.md  f12-watcher.md  f13-memory-integrity.md  f14-provenance-approvals.md  f15-circuit-breakers.md  f16-notification-triage.md  f2-credential-vault.md  f3-prometheus-otel.md  f4-cost-budgets.md  f5-taint-injection-policy.md  f6-history-search.md  f7-event-triggers.md  f8-provider-streaming-failover.md  f9-onboard-wizard.md  file-tool-error-recovery.md  memory-system-v2.md  observability-health-metrics.md  runtime-resilience-channels-scheduler.md  security-sandbox-env-gateway-auth.md  subagent-system.md  telegram-group-behavior-hermes-openclaw.md  telegram-reply-sources.md
plans/completed/: agent-scheduler.md  async-spawn-feedback.md  bobaclaw-agent-hardening.md  hermes-memory-skill-split.md  subagent-fixes.md  subagent-system.md  telegram-reply-sources.md
plans/templates/: agent-change-plan.md
references/: README.md
scripts/: bench-ya-default.sh  bench-ya-fixed.sh  bench-yaru-variants.sh  bisect-bwrap.sh  bobaclaw-scheduler.service  build-sandbox-image.sh  check-db.sh  check-migrations.sh  check_repo_structure.py  cursor-subagent-wrapper.py  debug-obscura-yaru.sh  docker-prod-build.sh  docker-prod-deploy.sh  docker-server-bootstrap.sh  enable-sandbox-network.sh  install-obscura-mcp.sh  mcp-call.sh  probe-api.sh  run-mcp-probes.sh  scan_secrets.py  test-chat.sh  test-decode.sh  test-docker-sandbox.sh  test-exec.sh  test-net.sh  test-new.sh  test-obscura-navigate.sh  test-provider-422.py  test-sandbox-net.sh
workspace-examples/home/: BOBACLAW.md  SOUL.md  TOOLS.md
workspace-examples/home/skills/hello/: SKILL.md
workspace-examples/home/skills/hello/scripts/: hello.sh
