[workspace]
resolver = "2"
members = [
    "crates/bobaclaw",
    "crates/bobaclaw-core",
    "crates/bobaclaw-state",
    "crates/bobaclaw-provider",
    "crates/bobaclaw-executor",
    "crates/bobaclaw-agent",
    "crates/bobaclaw-gateway",
    "crates/bobaclaw-skills",
    "crates/bobaclaw-skill-forge",
    "crates/bobaclaw-channel-telegram",
    "crates/bobaclaw-scheduler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ilya/bobaclaw"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
walkdir = "2"
tempfile = "3"
rustyline = "15"
pulldown-cmark = "0.13"

bobaclaw-core = { path = "crates/bobaclaw-core" }
bobaclaw-state = { path = "crates/bobaclaw-state" }
bobaclaw-provider = { path = "crates/bobaclaw-provider" }
bobaclaw-executor = { path = "crates/bobaclaw-executor" }
bobaclaw-agent = { path = "crates/bobaclaw-agent" }
bobaclaw-gateway = { path = "crates/bobaclaw-gateway" }
bobaclaw-skills = { path = "crates/bobaclaw-skills" }
bobaclaw-skill-forge = { path = "crates/bobaclaw-skill-forge" }
bobaclaw-channel-telegram = { path = "crates/bobaclaw-channel-telegram" }
bobaclaw-scheduler = { path = "crates/bobaclaw-scheduler" }
