[package]
name = "bobaclaw-agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bobaclaw-core.workspace = true
bobaclaw-executor.workspace = true
bobaclaw-provider.workspace = true
bobaclaw-skills.workspace = true
bobaclaw-state.workspace = true
bobaclaw-mcp.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
