[package]
name = "bobaclaw-agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-recursion = "1.1"
async-trait.workspace = true
bobaclaw-core.workspace = true
bobaclaw-executor.workspace = true
bobaclaw-provider.workspace = true
bobaclaw-skill-forge.workspace = true
bobaclaw-skills.workspace = true
bobaclaw-state.workspace = true
bobaclaw-mcp.workspace = true
chrono.workspace = true
cron = "0.15"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
