[package]
name = "bobaclaw-channel-telegram"
version.workspace = true
edition.workspace = true
description = "Telegram channel adapter for BobaClaw"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bobaclaw-agent.workspace = true
bobaclaw-core.workspace = true
bobaclaw-state.workspace = true
reqwest = { workspace = true, features = ["socks"] }
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
