[package]
name = "bobaclaw-executor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bobaclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
