[package]
name = "bobaclaw-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bobaclaw-core.workspace = true
bobaclaw-provider.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
