[package]
name = "bobaclaw-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bobaclaw-core.workspace = true
bobaclaw-provider.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[[example]]
name = "bench_obscura"
path = "examples/bench_obscura.rs"

[dev-dependencies]
tempfile.workspace = true
