[package]
name = "bobaclaw-state"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bobaclaw-core.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
